# ------------------------------------------------------------------------------
# Copyright 2017-2018 by Uwe Arzt mailto:mail@uwe-arzt.de, https://uwe-arzt.de
# under BSD License, see https://uwe-arzt.de/bsd-license
# ------------------------------------------------------------------------------

[package]
name = "knx_ets_rs"
version = "0.0.1"
authors = ["Uwe Arzt <mail@uwe-arzt.de>"]

description = "KNX ETS Library"

repository = "https://github.com/uwearzt/knx_ets_rs"
readme = "README.md"

categories = ["network-programming", "embedded"]
keywords = ["KNX", "Network"]
license = "BSD-2-Clause"

[dependencies]
# knx_rs = { path="../knx_rs" }
knx_rs = "0.0.1"

nom = "4.0.0-beta3"
