# ------------------------------------------------------------------------------
# Copyright 2019 Uwe Arzt, mail@uwe-arzt.de
# SPDX-License-Identifier: Apache-2.0
# ------------------------------------------------------------------------------

[package]
name = "knx_ets_rs"
version = "0.0.6"
edition = "2018"
authors = ["Uwe Arzt <mail@uwe-arzt.de>"]

description = "KNX ETS Library"

repository = "https://github.com/uwearzt/knx_ets_rs"
readme = "README.md"

categories = ["network-programming", "embedded"]
keywords = ["KNX", "Network"]
license = "Apache-2.0"

[dependencies]
# knx_rs = { path="../knx_rs" }
knx_rs = "0.0.6"

nom = "5.0.1"
